# xblock-drag-and-drop-v2

./: .gitignore  .gitmodules  .travis.yml  Changelog.md  MANIFEST.in  Makefile  Native_API.md  README.md  catalog-info.yaml  draggable_builder.html  install_test_deps.sh  manage.py  openedx.yaml  pylintrc  pylintrc_tweaks  pyproject.toml  requirements.txt  run_tests.py  setup.py  tox.ini
.github/workflows/: ci.yml  pypi-publish.yml  release.yml  upgrade-python-requirements.yml
.tx/: config
conf/locale/en/LC_MESSAGES/: django.po
css/: draggable_builder.css
doc/: i18n_docs.rst
drag_and_drop_v2/: __init__.py  compat.py  default_data.py  drag_and_drop_v2.py  translations  utils.py
drag_and_drop_v2/conf/locale/: config.yaml
drag_and_drop_v2/public/css/: drag_and_drop.css  drag_and_drop_edit.css
drag_and_drop_v2/public/js/: drag_and_drop.js  drag_and_drop_edit.js  view.js
drag_and_drop_v2/public/themes/: apros.css
drag_and_drop_v2/templates/html/: drag_and_drop.html  drag_and_drop_edit.html  js_templates.html
drag_and_drop_v2/translations/: config.yaml  settings.py
drag_and_drop_v2/translations/ar/LC_MESSAGES/: text.mo  text.po
drag_and_drop_v2/translations/de/LC_MESSAGES/: text.mo  text.po
drag_and_drop_v2/translations/de_DE/LC_MESSAGES/: text.mo  text.po
drag_and_drop_v2/translations/en/LC_MESSAGES/: text.mo  text.po
drag_and_drop_v2/translations/en_US/LC_MESSAGES/: text.mo  text.po
drag_and_drop_v2/translations/eo/LC_MESSAGES/: text.mo  text.po
drag_and_drop_v2/translations/es_419/LC_MESSAGES/: text.mo  text.po
js/: draggable_builder.js
requirements/: base.in  base.txt  ci.txt  constraints.txt  dev.in  dev.txt  pip-tools.txt  quality.in  quality.txt  requirements.txt  test.in  test.txt  workbench.in  workbench.txt
src/drag_and_drop_v2/: __init__.py  default_data.py  drag_and_drop_v2.py
tests/: manage.py  pylintrc  requirements.txt  settings.py  test_advanced.py  test_basics.py  test_data.json  test_drag_and_drop_v2.py  test_get_data.json  urls.py  utils.py
tests/data/: test_data.json  test_get_data.json  test_get_html_data.json  test_html_data.json
tests/data/old/: config_out.json
tests/integration/: test_base.py  test_block_contents_plain.py  test_block_parameters.py  test_custom_data_render.py  test_events.py  test_interaction.py  test_interaction_assessment.py  test_render.py  test_sizing.py  test_studio.py  test_title_and_question.py
tests/integration/data/: old_version_data.json  test_data.json  test_data_a11y.json  test_data_a11y_borders.json  test_data_other.json  test_html_data.json  test_html_titles_data.json  test_item_dropped.json  test_multiple_options_data.json  test_sizing_template.json  test_zone_align.json
tests/unit/: test_advanced.py  test_assessment_mode.py  test_basics.py  test_fixtures.py  test_indexibility.py  test_standard_mode.py
tests/unit/data/assessment/: config_out.json  (+2 more)
(+149 files in other folders)
